collapsed menu corrected

--- a/app/assets/stylesheets/grayscale.css.scss
+++ b/app/assets/stylesheets/grayscale.css.scss
@@ -66,7 +66,8 @@ a:focus {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #000000;
+    background-color: #FFFFFF;
+    
 }
 
 .navbar-custom .navbar-brand {
@@ -81,6 +82,7 @@ a:focus {
     padding: 4px 6px;
     font-size: 16px;
     color: #000000;
+    background-color: #000000;
 }
 
 .navbar-custom .navbar-brand .navbar-toggle:focus,
